syntax = "proto3";

package biz.cluster;

option go_package = "github.com/f-rambo/cloud-copilot/infrastructure/internal/biz;";

enum ClusterType {
      ClusterType_UNSPECIFIED = 0;
      LOCAL = 1;
      AWS = 2;
      ALICLOUD = 3;
}

enum ClusterStatus {
      UNSPECIFIED = 0;
      RUNNING = 1;
      DELETED = 2;
      STARTING = 3;
      STOPPING = 4;
      STOPPED = 5;
}

enum ClusterLevel {
      ClusterLevel_UNSPECIFIED = 0;
      BASIC = 1;
      STANDARD = 2;
      ADVANCED = 3;
}

enum NodeRole {
      NodeRole_UNSPECIFIED = 0;
      MASTER = 1;
      WORKER = 2;
      EDGE = 3;
}

enum NodeStatus {
      NodeStatus_UNSPECIFIED = 0;
      NODE_FINDING = 1;
      NODE_RUNNING = 2;
      NODE_CREATING = 3;
      NODE_DELETING = 4;
      NODE_DELETED = 5;
      NODE_ERROR = 6;
      NODE_PENDING = 7;
}

enum NodeGroupType {
      NodeGroupType_UNSPECIFIED = 0;
      NORMAL = 1;
      HIGH_COMPUTATION = 2;
      GPU_ACCELERATERD = 3;
      HIGH_MEMORY = 4;
      LARGE_HARD_DISK = 5;
      LOAD_DISK = 6;
}

enum NodeArchType {
      NodeArchType_UNSPECIFIED = 0;
      AMD64 = 1;
      ARM64 = 2;
}

enum NodeGPUSpec {
      NodeGPUSpec_UNSPECIFIED = 0;
      NVIDIA_A10 = 1;
      NVIDIA_V100 = 2;
      NVIDIA_T4 = 3;
      NVIDIA_P100 = 4;
      NVIDIA_P4 = 5;
}

enum ResourceType {
      RESOURCE_TYPE_UNSPECIFIED = 0;
      VPC = 1;
      SUBNET = 2;
      INTERNET_GATEWAY = 3;
      NAT_GATEWAY = 4;
      ROUTE_TABLE = 5;
      SECURITY_GROUP = 6;
      LOAD_BALANCER = 7;
      ELASTIC_IP = 8;
      AVAILABILITY_ZONES = 9;
      KEY_PAIR = 10;
      DATA_DEVICE = 11;
      INSTANCE = 12;
      REGION = 13;
}

enum ResourceTypeKeyValue {
      ResourceTypeKeyValue_UNSPECIFIED = 0;
      NAME = 1;
      ACCESS = 2;
      ZONE_ID = 3;
      REGION_ID = 4;
      ACCESS_PRIVATE = 5;
      ACCESS_PUBLIC = 6;
}

enum IngressControllerRuleAccess {
      IngressControllerRuleAccess_UNSPECIFIED = 0;
      PRIVATE = 1;
      PUBLIC = 2;
}

enum NodeError {
      NodeError_UNSPECIFIED = 0;
      INSUFFICIENT_INVENTORY = 1;
      CREATE_FAILURE = 2;
      START_TIMEOUT = 3;
}

message Cluster {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      int64 id = 1; // @gotags: gorm:"column:id;primaryKey;AUTO_INCREMENT"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      string version = 3; // @gotags: gorm:"column:version; default:''; NOT NULL"
      string api_server_address = 4; // @gotags: gorm:"column:api_server_address; default:''; NOT NULL"
      string config = 5; // @gotags: gorm:"column:config; default:''; NOT NULL"
      ClusterStatus status = 6; // @gotags: gorm:"column:status; default:0; NOT NULL"
      ClusterType type = 7; // @gotags: gorm:"column:type; default:0; NOT NULL"
      ClusterLevel level = 8; // @gotags: gorm:"column:level; default:0; NOT NULL"
      string public_key = 9; // @gotags: gorm:"column:public_key; default:''; NOT NULL"
      string private_key = 10; // @gotags: gorm:"column:private_key; default:''; NOT NULL"
      string region = 11; // @gotags: gorm:"column:region; default:''; NOT NULL"
      int64 user_id = 12; // @gotags: gorm:"column:user_id; default:0; NOT NULL"
      string access_id = 13; // @gotags: gorm:"column:access_id; default:''; NOT NULL"
      string access_key = 14; // @gotags: gorm:"column:access_key; default:''; NOT NULL"
      string token = 15; // @gotags: gorm:"column:token; default:''; NOT NULL"
      string ca_data = 16; // @gotags: gorm:"column:ca_data; default:''; NOT NULL"
      string cert_data = 17; // @gotags: gorm:"column:cert_data; default:''; NOT NULL"
      string key_data = 18; // @gotags: gorm:"column:key_data; default:''; NOT NULL"
      string node_user = 19; // @gotags: gorm:"column:node_user; default:''; NOT NULL"
      string node_ips = 20; // @gotags: gorm:"column:node_ips; default:''; NOT NULL"
      repeated NodeGroup node_groups = 21; // @gotags: gorm:"-"
      repeated Node nodes = 22; // @gotags: gorm:"-"
      repeated CloudResource cloud_resources = 23; // @gotags: gorm:"-"
      repeated IngressControllerRule ingress_controller_rules = 24; // @gotags: gorm:"-"
}

message NodeGroup {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      string id = 1; // @gotags: gorm:"column:id;primaryKey; NOT NULL"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      NodeGroupType type = 3; // @gotags: gorm:"column:type; default:0; NOT NULL"
      string os = 4; // @gotags: gorm:"column:os; default:''; NOT NULL"
      string platform = 5; // @gotags: gorm:"column:platform; default:''; NOT NULL"
      NodeArchType arch = 6; // @gotags: gorm:"column:arch; default:0; NOT NULL"
      int32 cpu = 7; // @gotags: gorm:"column:cpu; default:0; NOT NULL"
      int32 memory = 8; // @gotags: gorm:"column:memory; default:0; NOT NULL"
      int32 gpu = 9; // @gotags: gorm:"column:gpu; default:0; NOT NULL"
      NodeGPUSpec gpu_spec = 10; // @gotags: gorm:"column:gpu_spec; default:0; NOT NULL"
      int32 min_size = 11; // @gotags: gorm:"column:min_size; default:0; NOT NULL"
      int32 max_size = 12; // @gotags: gorm:"column:max_size; default:0; NOT NULL"
      int32 target_size = 13; // @gotags: gorm:"column:target_size; default:0; NOT NULL"
      float node_price = 14; // @gotags: gorm:"column:node_price; default:0; NOT NULL"
      float pod_price = 15; // @gotags: gorm:"column:pod_price; default:0; NOT NULL"
      string subnet_ip_cidr = 16; // @gotags: gorm:"column:subnet_ip_cidr; default:''; NOT NULL"
      string pod_ip_cidr = 17; // @gotags: gorm:"column:pod_ip_cidr; default:''; NOT NULL"
      int64 cluster_id = 18; // @gotags: gorm:"column:cluster_id; default:0; NOT NULL"
}

message Node {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      int64 id = 1; // @gotags: gorm:"column:id;primaryKey;AUTO_INCREMENT"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      string labels = 3; // @gotags: gorm:"column:labels; default:''; NOT NULL"
      string ip = 4; // @gotags: gorm:"column:ip; default:''; NOT NULL"
      string user = 5; // @gotags: gorm:"column:user; default:''; NOT NULL"
      NodeRole role = 6; // @gotags: gorm:"column:role; default:0; NOT NULL"
      NodeStatus status = 7; // @gotags: gorm:"column:status; default:0; NOT NULL"
      string instance_id = 8; // @gotags: gorm:"column:instance_id; default:''; NOT NULL"
      string image_id = 9; // @gotags: gorm:"column:image_id; default:''; NOT NULL"
      string backup_instance_ids = 10; // @gotags: gorm:"column:backup_instance_ids; default:''; NOT NULL"
      string instance_type = 11; // @gotags: gorm:"column:instance_type; default:''; NOT NULL"
      int32 system_disk_size = 12; // @gotags: gorm:"column:system_disk_size; default:0; NOT NULL"
      int32 data_disk_size = 13; // @gotags: gorm:"column:data_disk_size; default:0; NOT NULL"
      int64 cluster_id = 14; // @gotags: gorm:"column:cluster_id; default:0; NOT NULL"
      string node_group_id = 15; // @gotags: gorm:"column:node_group_id; default:''; NOT NULL"
      NodeError error_info = 16; // @gotags: gorm:"column:error_info; default:''; NOT NULL"
}

message CloudResource {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      string id = 1; // @gotags: gorm:"column:id;primaryKey; NOT NULL"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      string ref_id = 3; // @gotags: gorm:"column:ref_id; default:''; NOT NULL"
      string associated_id = 4; // @gotags: gorm:"column:associated_id; default:''; NOT NULL"
      ResourceType type = 5; // @gotags: gorm:"column:type; default:0; NOT NULL"
      string tags = 6; // @gotags: gorm:"column:tags; default:''; NOT NULL"
      string value = 7; // @gotags: gorm:"column:value; default:''; NOT NULL"
      int64 cluster_id = 8; // @gotags: gorm:"column:cluster_id; default:0; NOT NULL"
}

message IngressControllerRule {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      string id = 1; // @gotags: gorm:"column:id;primaryKey; NOT NULL"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      int32 start_port = 3; // @gotags: gorm:"column:start_port; default:0; NOT NULL"
      int32 end_port = 4; // @gotags: gorm:"column:end_port; default:0; NOT NULL"
      string protocol = 5; // @gotags: gorm:"column:protocol; default:''; NOT NULL"
      string ip_cidr = 6; // @gotags: gorm:"column:ip_cidr; default:''; NOT NULL"
      IngressControllerRuleAccess access = 7; // @gotags: gorm:"column:access; default:0; NOT NULL"
      int64 cluster_id = 8; // @gotags: gorm:"column:cluster_id; default:0; NOT NULL"
}